--- a/style.css
+++ b/style.css
@@ -1,3 +1,7 @@
+* {
+  border: 1px solid grey;
+}
+
 html {
   font-size: 10px;
 }
@@ -5,21 +9,30 @@ html {
 html, body {
   margin: 0;
   padding: 0;
-  font-family: "Source Sans Pro", sans-serif;
-  background-color: #36363F;
+  font-family: "Plex Sans", sans-serif;
+  font-weight: 700;
+  /* background-color: #43454E; */
+}
+
+body {
+  display: flex;
+  flex-direction: column;
 }
 
 .page-header {
   text-align: center;
   font-size: 3em;
+  font-weight: 100;
 }
 
 .keys {
   display: flex;
-  flex: 1;
-  min-height: 100vh;
-  align-items: center;
+  flex-direction: row;
   justify-content: center;
+  align-items: center;
+  flex: 1;
+
+  height: 500px;
 }
 
 .key {
@@ -30,13 +43,14 @@ html, body {
   transition: all .07s ease;
   width: 8rem;
   text-align: center;
-  color: #FAEBC9;
-  background: #8992A6;
+  color: #F1F1F0;
+  background: #73C6FA;
   text-shadow: 0 0 .1rem black;
 }
 
 kbd {
   display: block;
+
   font-size: 4rem;
   font-family: "Source Sans Pro", sans-serif;
 }
