Media query hides black keys

--- a/main.css
+++ b/main.css
@@ -85,3 +85,14 @@ kbd {
 .playing {
   transform:scale(1.1);
 }
+
+@media only screen and (max-width: 768px) {
+  div.key__black {
+    display: none;
+  }
+
+  div.key {
+    border-right: 1px solid black;
+  }
+}
+
